--- a/about.html
+++ b/about.html
@@ -8,12 +8,12 @@
   <link rel="icon" type="image/jpeg" href="assets/images/favicon.jpeg" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
 </head>
 
 <body>
   <!-- Navigation -->
-  <nav class="navbar">
+  <nav class="navbar" role="navigation" aria-label="Main navigation">
     <div class="navbar-header">
       <a href="index.html" class="navbar-brand">
         <img src="assets/images/liveha2.jpg" alt="LIVEHA Logo" class="navbar-logo" />
@@ -28,82 +28,77 @@
     </ul>
   </nav>
 
-  <section class="journey">
-    <h2>Who is LIVEHA?</h2>
-    <p class="hero-description">
-      LIVEHA is a singer, songwriter, producer, and sound engineer born and bred in Nairobi.
-      His soulful sound brings raw emotion and authenticity you can feel it in every note and hear it in every track.
-      Simply put, LIVEHA is a breath of fresh air in today’s music landscape.
-      <br>He is proudly signed under <mark>SONSOFZION INC.</mark>
-    </p>
-  </section>
+  <main>
+    <section class="journey">
+      <h2>Who is LIVEHA?</h2>
+      <p class="hero-description">
+        LIVEHA is a singer, songwriter, producer, and sound engineer born and bred in Nairobi.
+        His soulful sound brings raw emotion and authenticity you can feel it in every note and hear it in every track.
+        Simply put, LIVEHA is a breath of fresh air in today’s music landscape.
+        <br>He is proudly signed under <mark>SONSOFZION INC.</mark>
+      </p>
+    </section>
 
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-content">
+        <!-- <h1>LIVEHA</h1> -->
+        <div class="hero-images">
+          <video class="hero-video" autoplay muted loop playsinline>
+            <source src="assets/videos/about-vid.mp4" type="video/mp4" />
+            <img src="assets/images/liveha2.jpg" alt="LIVEHA" />
+          </video>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-content">
-      <!-- <h1>LIVEHA</h1> -->
-      <div class="hero-images">
-        <video class="hero-video" autoplay muted loop playsinline>
-          <source src="assets/videos/about-vid.mp4" type="video/mp4" />
-          <img src="assets/images/liveha2.jpg" alt="LIVEHA" />
-        </video>
+        </div>
+        <p class="hero-description">
+          <!-- <mark>Producer. Sound Engineer. Songwriter. Visionary.</mark><br>
+        <mark>Independent artist pushing sonic boundaries.</mark><br><br> -->
+          My music is a mirror of the soul vulnerable, fierce, spiritual.<br>
+          I don’t just make tracks, I tell stories.<br> <mark> Each beat, each word, comes from a place of
+            truth.</mark><br>
+          <mark>This is more than art. It’s my calling.</mark>
+        </p>
 
       </div>
-      <p class="hero-description">
-        <!-- <mark>Producer. Sound Engineer. Songwriter. Visionary.</mark><br>
-        <mark>Independent artist pushing sonic boundaries.</mark><br><br> -->
-        My music is a mirror of the soul vulnerable, fierce, spiritual.<br>
-        I don’t just make tracks, I tell stories.<br> <mark> Each beat, each word, comes from a place of
-          truth.</mark><br>
-        <mark>This is more than art. It’s my calling.</mark>
+    </section>
+
+    <section class="featured-works">
+      <h2>Featured Tracks</h2>
+      <ul>
+        <li><strong>MY LOVE</strong> – A soulful anthem about desire and divine timing.</li>
+        <li><strong>S.O.Z</strong> – Raw, reflective, and spiritually charged.</li>
+        <li><strong>FOR REAL</strong> – A sonic declaration of self-worth and independence.</li>
+      </ul>
+      <a href="https://open.spotify.com/artist/2bqydyILdFmREFoAxYQ3sO" target="_blank" class="btn">Stream on Spotify</a>
+    </section>
+
+    <section class="collab-inquiry">
+      <h2>Want to Work With Me?</h2>
+      <p class="hero-description">For bookings, collaborations, or media inquiries,
+      <div class="contact-content">
+        <p style="color: #e62815;">Email:
+          <a href="mailto:ellyasliveha@gmail.com"
+            style="color: #aaa8ad; text-decoration: underline;">ellyasliveha@gmail.com</a>
+        </p>
+        <p>
+          <i class="fab fa-instagram" style="color: #e62815;"></i>
+          <a href="https://www.instagram.com/_liveha_/?hl=en" target="_blank"
+            style="color: #aaa8ad; text-decoration: underline;">
+            My Instagram
+          </a>
+        </p>
+        <p>
+          <i class="fab fa-whatsapp" style="color: #e62815;"></i>
+          <a href="https://api.whatsapp.com/send?phone=%2B254758747481" target="_blank"
+            style="color: #aaa8ad; text-decoration: underline;">
+            Chat on WhatsApp
+          </a>
+        </p>
+      </div>
       </p>
+    </section>
 
-    </div>
-  </section>
-
-
-
-
-  <section class="featured-works">
-    <h2>Featured Tracks</h2>
-    <ul>
-      <li><strong>MY LOVE</strong> – A soulful anthem about desire and divine timing.</li>
-      <li><strong>S.O.Z</strong> – Raw, reflective, and spiritually charged.</li>
-      <li><strong>FOR REAL</strong> – A sonic declaration of self-worth and independence.</li>
-    </ul>
-    <a href="https://open.spotify.com/artist/2bqydyILdFmREFoAxYQ3sO" target="_blank" class="btn">Stream on Spotify</a>
-  </section>
-
-
-  <!-- <section class="vision-mission">
-    <h2>My Mission</h2>
-    <p class="hero-description">
-      To heal, elevate, and inspire through sound. To craft music not just for entertainment but for emotional
-      release, spiritual connection, and cultural expression.
-    </p>
-  </section> -->
-
-  <section class="collab-inquiry">
-    <h2>Want to Work With Me?</h2>
-    <p class="hero-description">For bookings, collaborations, or media inquiries,  <div class="contact-content">
-      <p style="color: #e62815;">Email:
-        <a href="mailto:ellyasliveha@gmail.com" style="color: #aaa8ad; text-decoration: underline;">ellyasliveha@gmail.com</a>
-      </p>
-      <p>
-        <i class="fab fa-instagram" style="color: #e62815;"></i>
-        <a href="https://www.instagram.com/_liveha_/?hl=en" target="_blank" style="color: #aaa8ad; text-decoration: underline;">
-          My Instagram
-        </a>
-      </p>
-      <p>
-        <i class="fab fa-whatsapp" style="color: #e62815;"></i>
-        <a href="https://api.whatsapp.com/send?phone=%2B254758747481" target="_blank" style="color: #aaa8ad; text-decoration: underline;">
-          Chat on WhatsApp
-        </a>
-      </p>
-    </div></p>
-  </section>
+  </main>
 
   <!-- Footer -->
   <footer class="footer">
@@ -128,6 +123,10 @@
           <i class="fab fa-youtube"></i>
         </a>
       </div>
+      <p style="color: #e62815;">A project by
+        <a href="https://www.instagram.com/mad.bark.creations/?hl=en" target="_blank"
+          style="color: #e62815;">madbarkcreations</a>
+      </p>
     </div>
   </footer>
 
