done with the news

--- a/about.html
+++ b/about.html
@@ -59,6 +59,25 @@
           <mark>This is more than art. It’s my calling.</mark>
         </p>
 
+        <div class="bento-grid">
+          <div class="bento-item wide tall">
+            <img src="assets/images/liveha.jpg" alt="LIVEHA" class="hero-img" />
+          </div>
+          <div class="bento-item wide">
+            <img src="assets/images/liveha2.jpg" alt="LIVEHA" class="hero-img" />
+          </div>
+          <div class="bento-item tall">
+            <img src="assets/images/liveha3.jpg" alt="LIVEHA" class="hero-img" />
+          </div>
+          <div class="bento-item">
+            <img src="assets/images/liveha4.jpg" alt="LIVEHA" class="hero-img" />
+          </div>
+          <div class="bento-item wide tall">
+            <img src="assets/images/liveha5.jpg" alt="LIVEHA" class="hero-img" />
+          </div>
+
+        </div>
+
       </div>
     </section>
 
