--- a/index.html
+++ b/index.html
@@ -186,10 +186,9 @@
     <section class="gallery">
       <h2>News</h2>
       <div class="gallery-grid">
-        <img src="assets/images/News1.jpg" alt="LIVEHA gallery image" />
-        <img src="assets/images/News2.jpg" alt="LIVEHA gallery image" />
-
-
+       <a href="news.html"> <img src="assets/images/news1.jpg" alt="LIVEHA gallery image"  /></a>
+        <a href="news.html"><img src="assets/images/News1.jpg" alt="LIVEHA gallery image" /></a>
+        <a href="news.html"><img src="assets/images/News2.jpg" alt="LIVEHA gallery image" /></a>
       </div>
     </section>
 
