--- a/news.html
+++ b/news.html
@@ -30,12 +30,30 @@
 
   <main>
     <section class="journey">
-      <h2> News</h2>
-      <p class="hero-description">
-        No updates yet but exciting things are coming soon!<br>
-        Stay tuned and follow LIVEHA on social media to be the first to know.
-      </p>
+      <h2>Latest News</h2>
+      <div class="news-article">
+        <img src="assets/images/news1.jpg" alt="The duo in action" class="hero-img" />
+        <h3 class="article-title">The Rise of LIVEHA: East African Artist Turning Heads</h3>
+        <p class="article-content">
+          The dynamic East African duo <mark>LIVEHA</mark> and <mark>GARVEY</mark> are making waves in the music scene with their
+          genre-blending sound and bold creative vision. Known for their electric performances and soulful storytelling,
+          the pair recently debuted a visual and sound experience that stunned audiences both online and in
+          person.<br><br>
+
+          Their latest project, shot in Nairobi and infused with elements of Afrofuturism, urban grit, and cultural
+          pride, has sparked conversations about the future of East African music and identity.<br><br>
+
+          With roots deeply embedded in their community and eyes set on the global stage, <mark>LIVEHA</mark> is proving
+          that independent artists can lead with authenticity, excellence, and power.
+        </p>
+
+        <div class="hero-video">
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/Q0YRUelVECE?list=OLAK5uy_nqNjjCivNFvt5Rq8bNdxKJgIpoilDRqzo"
+            title="LIVEHA Visual Experience" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
     </section>
+
   </main>
   <!-- Footer -->
   <footer class="footer">
